# agent-framework

./: .env.example  .gitignore  ARCHITECTURE.md  FRAMEWORK_SUMMARY.md  GETTING_STARTED.md  QUICKSTART.md  README.md  pyproject.toml
.github/workflows/: ci.yml  security.yml
agent_framework/: __init__.py
agent_framework/core/: __init__.py  agent.py  config.py  mcp_client.py  remote_mcp_client.py
agent_framework/oauth/: oauth_config.py  oauth_flow.py  oauth_tokens.py
agent_framework/server/: server.py
agent_framework/storage/: __init__.py  memory_store.py  token_store.py
agent_framework/tools/: __init__.py  memory.py  slack.py  web_reader.py
agent_framework/utils/: __init__.py  errors.py
tests/: conftest.py  test_agent.py  test_config.py  test_mcp_client.py  test_server.py  test_slack.py  test_token_store.py  test_tools_memory.py  test_web_reader.py  test_web_search.py
