[project]
name = "agent-framework"
version = "0.1.0"
description = "Reusable LLM agent framework built on Model Context Protocol (MCP)"
requires-python = ">=3.11"
authors = [
    {name = "Agent Framework Contributors"}
]
readme = "README.md"
license = {text = "MIT"}
keywords = ["llm", "agent", "mcp", "anthropic", "claude"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
dependencies = [
    "anthropic>=0.39.0",
    "mcp>=1.1.0",
    "httpx>=0.27.0",
    "python-dotenv>=1.0.0",
    "pydantic>=2.10.0",
    "pydantic-settings>=2.6.0",
    "authlib>=1.3.0",
    "cryptography>=44.0.0",
    "beautifulsoup4>=4.12.0",
    "lxml>=5.0.0",
    "html2text>=2024.2.26",
]

[project.urls]
Homepage = "https://github.com/brooksmcmillin/agent-framework"
Repository = "https://github.com/brooksmcmillin/agent-framework"
Issues = "https://github.com/brooksmcmillin/agent-framework/issues"

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["agent_framework"]

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.pyright]
typeCheckingMode = "strict"
